# MiniCoin_Moeda_Virtual

./: CMakeLists.txt  Currency.cpp  Makefile  README.md  client.cc  config.json  config.yaml  ideias.txt  main.cc  main.cpp  teste
MiniCoin/: CMakeLists.txt  README.md  client.cc  cliente  cliente.cpp
MiniCoin/controllers/: BlockChain.cc  BlockChain.h  BlockchainWebSocket.cc
MiniCoin/models/: BlockChain.cpp  BlockChain.hpp  Currency.hpp  Message.cpp  Message.hpp
MiniCoin/test/: CMakeLists.txt
controllers/: BlockchainController.cc  BlockchainController.h  BlockchainWebSocket.cc  BlockchainWebSocket.h  prefix.cc
logs/: log_2025-11-13_08-34-13.txt  log_2025-11-13_08-34-53.txt  log_2025-11-13_08-49-10.txt  log_2025-11-13_08-51-17.txt  log_2025-11-13_09-14-37.txt  log_2025-11-13_09-15-29.txt  log_2025-11-13_09-17-04.txt  log_2025-11-13_09-18-11.txt  log_2025-11-13_09-18-58.txt  log_2025-11-13_09-19-57.txt  log_2025-11-13_10-16-48.txt  log_2025-11-13_10-23-24.txt  log_2025-11-13_10-26-44.txt  log_2025-11-13_10-29-16.txt  log_2025-11-13_10-29-18.txt  log_2025-11-13_10-32-48.txt  log_2025-11-13_10-32-50.txt  log_2025-11-13_10-35-38.txt  log_2025-11-13_20-48-09.txt  log_2025-11-13_20-50-28.txt  log_2025-11-13_20-59-43.txt  log_2025-11-13_21-04-49.txt  log_2025-11-13_21-05-22.txt  log_2025-11-13_21-05-50.txt  log_2025-11-13_21-05-59.txt  log_2025-11-13_21-07-50.txt  log_2025-11-13_21-09-12.txt  log_2025-11-13_21-27-28.txt  log_2025-11-13_21-28-20.txt  log_2025-11-13_21-38-16.txt  log_2025-11-13_21-39-09.txt  log_2025-11-13_21-40-22.txt  log_2025-11-13_22-12-51.txt  log_2025-11-13_22-13-07.txt  log_2025-11-13_22-13-09.txt  log_2025-11-13_22-18-23.txt  log_2025-11-13_22-19-10.txt  log_2025-11-13_22-21-00.txt  log_2025-11-13_22-21-12.txt  log_2025-11-13_22-22-06.txt  (+20 more)
models/: BlockChain.cpp  BlockChain.hpp  Currency.cpp  Currency.hpp  Message.cpp  Message.hpp  logger.hpp  model.json  utils.hpp
test/: CMakeLists.txt  Makefile  cmake_install.cmake
